# seminario

./: .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
sample/: main.py
sample/cli/: api.py  stdin.py
sample/data/: config.yml  database.csv
sample/data/abstract/: alice.txt
sample/data/poster/css/: poster.css
seminar/: main.py
seminar/data/: database.csv
seminario/: __init__.py  _io.py  config.py  database.py  interactive.py  poster.py  seminar.py  seminardataframe.py  tba.yml
seminario/cli/: _io.py  interactive.py  stdin.py
seminario/config/: __init__.py  config.py  path.yml  seminar.yml  tba.yml
seminario/utils/: __init__.py  table.py
seminario_/: seminar.py  seminardataframe.py
tests/: _test_interactive.py  _test_io.py  _test_poster.py  context.py  test_bunch.py  test_check.py  test_config.py  test_init.py  test_poster.py  test_seminar.py  test_seminardataframe.py  test_stdin.py  test_table.py
tests/cases/: 01_typical.yml
tests/cases/input/: abstract.yml  date.yml  slide.yml  time.yml
tests/cases/invalid/: 02_date.yml  05_time.yml  07_time.yml
tests/cases/seminar/: 01.yml  02.yml  03.yml  04.yml  05.yml  06.yml  07.yml  08.yml  09.yml  10.yml  11.yml  12.yml  13.yml
tests/cases/valid/: 02_empty.yml  03.yml
tests/data/: config.yml
tests/data/abstract/: charlie.txt
tests/data/poster/: poster.css
tests_/: _test_interactive.py  test_seminar.py
tests_/data/: database.csv  database_new.csv
tests_/data/abstract/: alice.txt  bob.txt
tests_/data/poster/css/: poster.css
